4-introduction-to-kubernetes-and-go-microservice-orchestration/config/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-microservice
  labels:
    app: go-microservice
spec:
  replicas: 2
  revisionHistoryLimit: 10
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  selector:
    matchLabels:
      app: go-microservice
  template:
    metadata:
      labels:
        app: go-microservice
        tier: service
    spec:
      containers:
      - name: microservice
        image: quay.io/avisied0/go-cloud-native:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
