4-introduction-to-kubernetes-and-go-microservice-orchestration/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-microservice
spec:
  selector:
    app: go-microservice
  ports:
  - port: 8080
    protocol: TCP
    name: go-microservice
