4-introduction-to-kubernetes-and-go-microservice-orchestration/config/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    # https://docs.openshift.com/container-platform/4.6/networking/routes/route-configuration.html
    haproxy.router.openshift.io/timeout: "2s"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
  labels:
    app: go-microservice
  name: go-microservice
spec:
  # host: go-microservice.apps.permanent-47.idmocp.lab.eng.rdu2.redhat.com
  port:
    targetPort: go-microservice
  to:
    kind: Service
    name: go-microservice
    weight: 100
  # tls:
  #   termination: passthrough
  wildcardPolicy: None
